--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pm2:start": "pm2 start index.js",
+    "pm2:stop": "pm2 stop index"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "@movr/fund-movr-core": "0.0.1-beta.1",
     "axios": "^0.24.0",
     "ethers": "^5.5.2",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "pm2": "^5.1.2"
   }
 }
